# jarvis

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: VoiceInterface.tsx
src/: main.rs
