[package]
name = "jarvis-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }  # Add "ws" feature
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"  # Add this - for async streams
tokio-stream = "0.1"  # Add this - for streaming